# playwritght-proxy-mcp

./: .env.example  .gitignore  BUGFIX_2025-12-07.md  CLAUDE.md  Dockerfile  README.md  claude_desktop_config.example.json  docker-compose.devcontainer.yml  docker-compose.yml  next_steps.md  package-lock.json  package.json  pyproject.toml  pytest.ini
.claude/commands/: build.md
.devcontainer/: devcontainer.json
docs/: ARIA_SNAPSHOTS.md  BLOB_STORAGE.md  BULK_EXECUTION.md  CUSTOMIZATION.md  LOGGING.md  STEALTH.md  WSL_WINDOWS.md
examples/: test_logging.py
src/aria_snapshot_parser/tests/: conftest.py  test_parser.py
src/aria_snapshot_parser/tests/fixtures/: example_domain.yaml
src/playwright_proxy_mcp/: __init__.py  server.py  types.py
src/playwright_proxy_mcp/api/: __init__.py  blob_tools.py
src/playwright_proxy_mcp/middleware/: __init__.py  mcp_logging.py
src/playwright_proxy_mcp/playwright/: __init__.py  blob_manager.py  config.py  middleware.py  process_manager.py  proxy_client.py
src/playwright_proxy_mcp/utils/: __init__.py  aria_processor.py  jmespath_extensions.py  logging_config.py  navigation_cache.py
tests/: __init__.py  conftest.py  test_aria_processor.py  test_blob_manager.py  test_blob_tools.py  test_browser_integration.py  test_browser_jmespath_integration.py  test_bulk_jmespath_integration.py  test_config.py  test_config_extended.py  test_integration.py  test_mcp_logging_middleware.py  test_middleware.py  test_middleware_text_content_conversion.py  test_process_manager.py  test_proxy_client.py  test_proxy_client_is_error_fix.py  test_server.py  test_tool_integration.py  test_tool_mapping.py  test_types.py
tests/fixtures/: __init__.py  browser_fixture.py
